--- a/AsyncBatchAlgTest/AsyncBatchAlgTest.csproj
+++ b/AsyncBatchAlgTest/AsyncBatchAlgTest.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.13.1" />
+    <PackageReference Include="morelinq" Version="3.3.2" />
   </ItemGroup>
 
 </Project>
